Decor: init edibles